--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="main">
-      <div id="quote-title" class="special-title">Quote of the Day</div>
+      <div id="quote-title"  class="special-title">Quote of the Day</div>
       <p id="quote-of-the-day"></p>
       <img src="http://i.giphy.com/aG15SLmsjxiNO.gif" alt="" />
 
@@ -69,5 +69,6 @@
         <li>Dubai</li>
       </ul>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
